[gd_scene load_steps=10 format=3 uid="uid://cjesn8ca841ti"]

[ext_resource type="Script" uid="uid://ti8dem02lbvc" path="res://scripts/bosses/boss_1_skills/range.gd" id="1_r63en"]
[ext_resource type="Texture2D" uid="uid://cap8pvw2lrmu3" path="res://assets/animations/FlyingEnemy/FE1.PNG" id="2_acrog"]
[ext_resource type="Texture2D" uid="uid://c0e43pemx81s0" path="res://assets/animations/FlyingEnemy/FE2.PNG" id="3_ad5xd"]

[sub_resource type="Animation" id="Animation_xnaus"]
resource_name = "idle"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vaj5w"]
_data = {
&"idle": SubResource("Animation_xnaus")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_dvjff"]
atlas = ExtResource("2_acrog")
region = Rect2(0, 0, 1080, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_6r77u"]
atlas = ExtResource("3_ad5xd")
region = Rect2(0, 0, 1080, 1080)

[sub_resource type="SpriteFrames" id="SpriteFrames_1anuu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvjff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6r77u")
}],
"loop": true,
"name": &"fly",
"speed": 4.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_acrog"]
radius = 46.09772

[node name="range" type="Area2D"]
collision_layer = 32
collision_mask = 65
script = ExtResource("1_r63en")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(62, -7)
target_position = Vector2(94, 0)
collision_mask = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vaj5w")
}

[node name="DetectUp" type="RayCast2D" parent="."]
position = Vector2(-3, 0)
target_position = Vector2(2, -374)
collision_mask = 2

[node name="DetectDown" type="RayCast2D" parent="."]
position = Vector2(0, 102)
target_position = Vector2(2, 337)
collision_mask = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-9.536743e-07, -4)
scale = Vector2(-0.209, 0.209)
sprite_frames = SubResource("SpriteFrames_1anuu")
animation = &"fly"
autoplay = "fly"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-9, -7)
shape = SubResource("CircleShape2D_acrog")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
